--- a/index.html
+++ b/index.html
@@ -2,41 +2,50 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Calculadora de Parcelamento</title>
+  <style>
+    body { font-family: sans-serif; max-width: 600px; margin: 2rem auto; }
+    label { display: block; margin: 0.5rem 0; }
+    table { width: 100%; border-collapse: collapse; margin-top: 1rem; }
+    th, td { border: 1px solid #ccc; padding: 0.4rem; text-align: right; }
+    th:nth-child(1), td:nth-child(1) { text-align: center; }
+    #msg { color: red; margin-top: 0.5rem; }
+  </style>
 </head>
 <body>
   <h1>Calculadora de Parcelamento</h1>
 
-  <label>Valor base (R$):
-    <input id="price" type="number" step="0.01" value="100" />
+  <label>
+    Bandeira:
+    <select id="issuer">
+      <option value="">-- escolha --</option>
+      <!-- options filled by JS -->
+    </select>
   </label>
 
-  <label>Parcelas:
-    <input id="installments" type="number" min="1" max="12" value="5" />
-  </label>
-
-  <label>Taxa (MDR + RR) %:
-    <input id="fee" type="number" step="0.01" value="8.52" />
+  <label>
+    Valor da compra (R$):
+    <input id="price" type="number" step="0.01" min="0" value="100.00">
   </label>
 
   <button id="calc">Calcular</button>
+  <div id="msg"></div>
 
-  <pre id="out"></pre>
+  <table>
+    <thead>
+      <tr>
+        <th>Parcelas</th>
+        <th>Taxa %</th>
+        <th>Valor<br>Parcela</th>
+        <th>Total</th>
+        <th>Acréscimo R$</th>
+        <th>Acréscimo %</th>
+      </tr>
+    </thead>
+    <tbody id="tbody"></tbody>
+  </table>
 
-  <script type="module">
-    import { calcFinalPrice } from './src/fees.ts';
-
-    document.getElementById('calc').onclick = () => {
-      const base = parseFloat(price.value);
-      const fee  = parseFloat(fee.value);
-      const inst = parseInt(installments.value, 10);
-
-      const { finalPrice, surcharge } = calcFinalPrice(base, fee);
-
-      out.textContent =
-        `${inst}x de R$ ${(finalPrice / inst).toFixed(2)}\n` +
-        `Total: R$ ${finalPrice.toFixed(2)} (acréscimo R$ ${surcharge.toFixed(2)})`;
-    };
-  </script>
+  <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
