--- a/index.html
+++ b/index.html
@@ -2,49 +2,42 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculadora de Parcelamento</title>
-  <style>
-    body { font-family: sans-serif; max-width: 600px; margin: 2rem auto; }
-    label { display: block; margin: 0.5rem 0; }
-    table { width: 100%; border-collapse: collapse; margin-top: 1rem; }
-    th, td { border: 1px solid #ccc; padding: 0.4rem; text-align: right; }
-    th:nth-child(1), td:nth-child(1) { text-align: center; }
-    #msg { color: red; margin-top: 0.5rem; }
-  </style>
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-  <h1>Calculadora de Parcelamento</h1>
+  <main class="container">
+    <header>
+      <img src="/logo.svg" alt="Logo">
+      <h1>Calculadora de Parcelamento</h1>
+    </header>
 
-  <label>
-    Bandeira:
+    <label for="issuer">Bandeira</label>
     <select id="issuer">
       <option value="">-- escolha --</option>
-      <!-- options filled by JS -->
     </select>
-  </label>
 
-  <label>
-    Valor da compra (R$):
+    <label for="price">Valor da compra (R$)</label>
     <input id="price" type="number" step="0.01" min="0" value="100.00">
-  </label>
 
-  <button id="calc">Calcular</button>
-  <div id="msg"></div>
+    <button id="calc">Calcular</button>
+    <div id="msg"></div>
 
-  <table>
-    <thead>
-      <tr>
-        <th>Parcelas</th>
-        <th>Taxa %</th>
-        <th>Valor<br>Parcela</th>
-        <th>Total</th>
-        <th>Acréscimo R$</th>
-        <th>Acréscimo %</th>
-      </tr>
-    </thead>
-    <tbody id="tbody"></tbody>
-  </table>
+    <table>
+      <thead>
+        <tr>
+          <th>Parcelas</th>
+          <th>Taxa %</th>
+          <th>Valor Parcela</th>
+          <th>Total</th>
+          <th>Acréscimo R$</th>
+          <th>Acréscimo %</th>
+        </tr>
+      </thead>
+      <tbody id="tbody"></tbody>
+    </table>
+  </main>
 
   <script type="module" src="/src/main.ts"></script>
 </body>
