Many different fixes + CI deploy + include settings.html in the build

--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
     </table>
   </main>
 
-  <script type="module" src="/src/main.ts"></script>
+  <script type="module" src="./src/main.ts"></script>
 </body>
 </html>
