--- a/settings.html
+++ b/settings.html
@@ -26,6 +26,6 @@
     <p style="margin-top:2rem"><a href="/">← voltar à calculadora</a></p>
   </main>
 
-  <script type="module" src="/src/settings.ts"></script>
+  <script type="module" src="./src/settings.ts"></script>
 </body>
 </html>
