--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculadora de Parcelamento</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <main class="container">
     <header>
-      <img src="/logo.svg" alt="Logo" width="48" height="48">
+      <img src="./logo.svg" alt="Logo" width="48" height="48">
       <h1>Calculadora de Parcelamento</h1>
     </header>
 
