--- a/settings.html
+++ b/settings.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Configurações</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <main class="container">
     <header>
-      <a href="/"><img src="/logo.svg" alt="Logo" width="40"></a>
+      <a href="/"><img src="./logo.svg" alt="Logo" width="40"></a>
       <h1>Configurações</h1>
     </header>
 
