Fix JS path: use relative ./src/*.ts for GitHub Pages

--- a/settings.html
+++ b/settings.html
@@ -26,6 +26,6 @@
     <p><a href="./index.html">← voltar</a></p>
   </main>
 
-  <script type="module" src="/src/settings.ts"></script>
+  <script type="module" src="./src/settings.ts"></script>
 </body>
 </html>
