--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
     </table>
   </main>
 
-  <script type="module" src="/src/main.ts"></script>
+  <script type="module" src="./src/main.ts"></script>
 </body>
 </html>
