Remove 'Taxa %' column from results table

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <table>
       <thead>
         <tr>
-          <th>Parcelas</th><th>Taxa %</th><th>Valor Parcela</th>
+          <th>Parcelas</th><th>Valor Parcela</th>
           <th>Total</th><th>Acréscimo R$</th><th>Acréscimo %</th>
         </tr>
       </thead>
