--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <main class="container">
     <header>
-      <img src="./logo.svg" alt="Logo" width="48">
+      <img src="./logo.svg" alt="Logo" class="logo">
       <h1>Calculadora de Parcelamento</h1>
     </header>
 
