--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
     </label>
 
     <label>Valor da compra (R$)
-      <input id="price" type="number" step="0.01" min="0" value="100.00">
+      <input id="price" type="number" step="0.01" min="0">
     </label>
 
-    <button id="calc">Calcular</button>
+    <div style="display: flex; gap: 0.5rem; margin-top: 1rem;">
+      <button id="calc">Calcular</button>
+      <button id="reset" class="secondary">Resetar</button>
+    </div>
     <div id="msg"></div>
 
     <p><a href="./settings.html">Configurações</a></p>
