--- a/index.html
+++ b/index.html
@@ -23,19 +23,23 @@
       <input id="price" type="number" step="0.01" min="0">
     </label>
 
-    <div style="display: flex; gap: 0.5rem; margin-top: 1rem;">
-      <button id="calc">Calcular</button>
+    <div class="btn-row">
+      <button id="calc" class="primary">Calcular</button>
       <button id="reset" class="secondary">Resetar</button>
     </div>
+
     <div id="msg"></div>
 
-    <p><a href="./settings.html">Configurações</a></p>
+    <p style="margin-top:1rem"><a href="./settings.html">Configurações</a></p>
 
     <table>
       <thead>
         <tr>
-          <th>Parcelas</th><th>Valor Parcela</th>
-          <th>Total</th><th>Acréscimo R$</th><th>Acréscimo %</th>
+          <th>Parcelas</th>
+          <th>Valor Parcela</th>
+          <th>Total</th>
+          <th>Acréscimo R$</th>
+          <th>Acréscimo %</th>
         </tr>
       </thead>
       <tbody id="tbody"></tbody>
