--- a/settings.html
+++ b/settings.html
@@ -2,28 +2,29 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Configurações</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <main class="container">
     <header>
-      <img src="./logo.svg" alt="Logo" width="40">
+      <img src="./logo.svg" alt="Logo" class="logo">
       <h1>Configurações</h1>
     </header>
 
     <label>Alíquota Simples Nacional (%)
       <input id="simp" type="number" step="0.01" min="0" max="100">
     </label>
-    <button id="save">Salvar</button>
 
-    <hr>
+    <div class="btn-row">
+      <button id="save" class="save">Salvar</button>
+      <button id="refresh" class="refresh">Atualizar tabelas</button>
+    </div>
 
-    <button id="refresh">Atualizar tabelas</button>
-    <div id="msg"></div>
+    <div id="msg" style="margin-top:.75rem"></div>
 
-    <p><a href="./index.html">← voltar</a></p>
+    <p style="margin-top:1.25rem"><a href="./index.html">← voltar</a></p>
   </main>
 
   <script type="module" src="/src/settings.ts"></script>
