--- a/index.html
+++ b/index.html
@@ -1,51 +1,95 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Calculadora de Parcelamento</title>
-  <link rel="stylesheet" href="./style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>Calculadora de Parcelamento</title>
+
+  <!-- Typefaces -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Roboto+Mono:wght@400&display=swap" rel="stylesheet" />
+
+  <!-- Global styles -->
+  <link rel="stylesheet" href="./style.css" />
 </head>
+
 <body>
-  <main class="container">
-    <header>
-      <img src="./logo.svg" alt="Logo" class="logo">
-      <h1>Calculadora de Parcelamento</h1>
+  <!-- ———————————————————————————————————————————————————————————
+       Global gear (settings) access – replaces the “Configurações” link
+       ——————————————————————————————————————————————————————————— -->
+  <button id="gear-btn" class="gear-btn" title="Configurações">
+    <img id="gear-icon" alt="Ir para configurações" />
+  </button>
+
+  <!-- ———————————————————————————————————————————————————————————
+       App shell
+       ——————————————————————————————————————————————————————————— -->
+  <main class="container two-col">
+
+    <!-- Header (shared across both panels) -->
+    <header class="app-header">
+      <img src="./logo.svg" alt="Logo Empório Zingaro" class="logo" />
+      <h1>Calculadora de Parcelamento</h1>
     </header>
 
-    <label>Bandeira
-      <select id="issuer">
-        <option value="">-- escolha --</option>
-      </select>
-    </label>
+    <div class="content">
 
-    <label>Valor da compra (R$)
-      <input id="price" type="number" step="0.01" min="0">
-    </label>
+      <!-- LEFT –––––––––––––––––––––––––––––––––––––––––––––––––––– -->
+      <section class="panel-left glass">
 
-    <div class="btn-row">
-      <button id="calc" class="primary">Calcular</button>
-      <button id="reset" class="secondary">Resetar</button>
-    </div>
+        <label for="issuer">Bandeira</label>
+        <select id="issuer">
+          <option value="">-- escolha --</option>
+          <!-- opções são injetadas via main.ts -->
+        </select>
 
-    <div id="msg"></div>
+        <label for="price">Valor da compra (R$)</label>
+        <input id="price" type="number" step="0.01" min="0" />
 
-    <p style="margin-top:1rem"><a href="./settings.html">Configurações</a></p>
+        <div class="btn-row">
+          <button id="calc"  class="btn primary">Calcular</button>
+          <button id="reset" class="btn secondary">Resetar</button>
+        </div>
 
-    <table>
-      <thead>
-        <tr>
-          <th>Parcelas</th>
-          <th>Valor Parcela</th>
-          <th>Total</th>
-          <th>Acréscimo R$</th>
-          <th>Acréscimo %</th>
-        </tr>
-      </thead>
-      <tbody id="tbody"></tbody>
-    </table>
+        <div id="msg" class="msg"></div>
+      </section>
+
+
+      <!-- RIGHT ––––––––––––––––––––––––––––––––––––––––––––––––––– -->
+      <section class="panel-right glass">
+
+        <!-- 3 × 4 responsive card grid                     -->
+        <div id="cards" class="cards-grid">
+          <!-- cards are rendered here by main.ts -->
+        </div>
+
+        <!-- Fallback table kept for progressive refactor   -->
+        <table id="legacy-table" hidden>
+          <thead>
+            <tr>
+              <th>Parcelas</th>
+              <th>Valor Parcela</th>
+              <th>Total</th>
+              <th>Acréscimo R$</th>
+              <th>Acréscimo %</th>
+            </tr>
+          </thead>
+          <tbody id="tbody"></tbody>
+        </table>
+
+      </section>
+
+    </div><!-- /.content -->
   </main>
 
+  <!-- ———————————————————————————————————————————————————————————
+       Application code
+       ——————————————————————————————————————————————————————————— -->
   <script type="module" src="/src/main.ts"></script>
+  <script type="module">
+    /* small inline helper: clicking the gear opens settings page */
+    document.getElementById('gear-btn')!
+            .addEventListener('click', () => location.href = './settings.html');
+  </script>
 </body>
 </html>
