refactor(ui): complete two‑column, glassmorphic redesign with card grid
- index.html
  • Split main container into left (.panel-left) and right (.panel-right) glass panels
  • Replaced “Configurações” link with floating gear button (#gear-btn + #gear-icon)
  • Added <div id="cards" class="cards-grid"> for dynamic card rendering
  • Hid legacy <table> behind ‘hidden’ for progressive fallback

- style.css
  • Introduced duotone palette (midnight blue, vibrant teal) and top‑to‑bottom gradient
  • Applied glassmorphism (semi‑opaque panels + backdrop‑filter blur/saturate)
  • Styled neumorphic inputs, updated typography (Inter + Roboto Mono)
  • Built responsive 3‑row grid (.cards-grid) and clear, centered .card hierarchy

- src/main.ts
  • Imported and wired bundled SVGs via Vite alias (`@/assets/icons/…`)
  • Swapped table rows for buildCard()–generated cards with click‑to‑select + keyboard support
  • Implemented issuer logo preview via import.meta.glob
  • Ensured smooth scroll to selected card (block: 'center')

- vite.config.ts
  • Added resolve.alias '@' → 'src'
  • Enabled assetsInclude for SVG bundling

- tsconfig.json & vite-env.d.ts
  • Configured path alias for '@/*'
  • Declared '*.svg' module for TypeScript

This commit finishes the UI/UX overhaul—modern glass panels, duotone theme, fast glance‑and‑go card grid, and seamless SVG icon integration via Vite.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <title>Calculadora de Parcelamento</title>
 
   <!-- Typefaces -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Roboto+Mono:wght@400&display=swap" rel="stylesheet" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Roboto+Mono:wght@400&display=swap"
+    rel="stylesheet"
+  />
 
   <!-- Global styles -->
   <link rel="stylesheet" href="./style.css" />
@@ -38,32 +41,39 @@
       <section class="panel-left glass">
 
         <label for="issuer">Bandeira</label>
-        <select id="issuer">
-          <option value="">-- escolha --</option>
-          <!-- opções são injetadas via main.ts -->
-        </select>
+        <div class="issuer-field">
+          <select id="issuer">
+            <option value="">-- escolha --</option>
+            <!-- opções são injetadas via main.ts -->
+          </select>
+          <!-- issuer logo preview -->
+          <img
+            id="issuer-preview"
+            class="issuer-preview"
+            alt=""
+            aria-hidden="true"
+          />
+        </div>
 
         <label for="price">Valor da compra (R$)</label>
         <input id="price" type="number" step="0.01" min="0" />
 
         <div class="btn-row">
-          <button id="calc"  class="btn primary">Calcular</button>
+          <button id="calc" class="btn primary">Calcular</button>
           <button id="reset" class="btn secondary">Resetar</button>
         </div>
 
         <div id="msg" class="msg"></div>
       </section>
 
-
       <!-- RIGHT ––––––––––––––––––––––––––––––––––––––––––––––––––– -->
       <section class="panel-right glass">
-
-        <!-- 3 × 4 responsive card grid                     -->
+        <!-- 3 × n responsive card grid -->
         <div id="cards" class="cards-grid">
           <!-- cards are rendered here by main.ts -->
         </div>
 
-        <!-- Fallback table kept for progressive refactor   -->
+        <!-- Fallback table kept for progressive refactor -->
         <table id="legacy-table" hidden>
           <thead>
             <tr>
@@ -76,9 +86,7 @@
           </thead>
           <tbody id="tbody"></tbody>
         </table>
-
       </section>
-
     </div><!-- /.content -->
   </main>
 
@@ -87,9 +95,9 @@
        ——————————————————————————————————————————————————————————— -->
   <script type="module" src="/src/main.ts"></script>
   <script type="module">
-    /* small inline helper: clicking the gear opens settings page */
+    /* clicking the gear opens the settings page */
     document.getElementById('gear-btn')?.
-            addEventListener('click', () => location.href = './settings.html');
+      addEventListener('click', () => location.href = './settings.html');
   </script>
 </body>
 </html>
