--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
   <title>Calculadora de Parcelamento</title>
 
   <!-- Typefaces -->
@@ -11,91 +10,82 @@
     href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Roboto+Mono:wght@400&display=swap"
     rel="stylesheet"
   />
-
 </head>
 
 <body>
-  <!-- ———————————————————————————————————————————————————————————
-       Global gear (settings) access – replaces the “Configurações” link
-       ——————————————————————————————————————————————————————————— -->
+  <!-- Floating gear button -->
   <button id="gear-btn" class="gear-btn" title="Configurações">
     <img id="gear-icon" alt="Ir para configurações" />
   </button>
 
-  <!-- ———————————————————————————————————————————————————————————
-       App shell
-       ——————————————————————————————————————————————————————————— -->
+  <!-- App shell -->
   <main class="container two-col">
-
-    <!-- Header (shared across both panels) -->
     <header class="app-header">
       <img src="./logo.svg" alt="Logo Empório Zingaro" class="logo" />
       <h1>Calculadora de Parcelamento</h1>
     </header>
 
     <div class="content">
-
-      <!-- LEFT –––––––––––––––––––––––––––––––––––––––––––––––––––– -->
+      <!-- LEFT panel -->
       <section class="panel-left glass">
+        <label>Bandeira</label>
 
-        <label for="issuer">Bandeira</label>
-        <div class="issuer-field">
-          <select id="issuer">
-            <option value="">-- escolha --</option>
-            <!-- opções são injetadas via main.ts -->
-          </select>
-          <!-- issuer logo preview -->
-          <img
-            id="issuer-preview"
-            class="issuer-preview"
-            alt=""
-            aria-hidden="true"
-          />
+        <!-- Accessible custom combobox -->
+        <div id="issuer-combo"
+             class="combo"
+             role="combobox"
+             aria-haspopup="listbox"
+             aria-expanded="false"
+             tabindex="0">
+          <img class="combo-icon" alt="" aria-hidden="true" />
+          <span class="combo-label">-- escolha --</span>
+          <svg class="combo-caret" viewBox="0 0 24 24" width="18" height="18">
+            <path d="M6 9l6 6 6-6" stroke="currentColor" stroke-width="2"
+                  stroke-linecap="round" stroke-linejoin="round" fill="none"/>
+          </svg>
         </div>
+        <ul id="issuer-list" class="combo-list" role="listbox" hidden></ul>
+
+        <!-- hidden native select for form semantics -->
+        <select id="issuer" name="issuer" hidden tabindex="-1" aria-hidden="true">
+          <option value="">-- escolha --</option>
+        </select>
 
         <label for="price">Valor da compra (R$)</label>
         <input id="price" type="number" step="0.01" min="0" />
 
         <div class="btn-row">
-          <button id="calc" class="btn primary">Calcular</button>
+          <button id="calc"  class="btn primary">Calcular</button>
           <button id="reset" class="btn secondary">Resetar</button>
         </div>
 
         <div id="msg" class="msg"></div>
       </section>
 
-      <!-- RIGHT ––––––––––––––––––––––––––––––––––––––––––––––––––– -->
+      <!-- RIGHT panel -->
       <section class="panel-right glass">
-        <!-- 3 × n responsive card grid -->
-        <div id="cards" class="cards-grid">
-          <!-- cards are rendered here by main.ts -->
-        </div>
+        <div id="cards" class="cards-grid"></div>
 
-        <!-- Fallback table kept for progressive refactor -->
+        <!-- Hidden legacy table (fallback) -->
         <table id="legacy-table" hidden>
           <thead>
             <tr>
-              <th>Parcelas</th>
-              <th>Valor Parcela</th>
-              <th>Total</th>
-              <th>Acréscimo R$</th>
-              <th>Acréscimo %</th>
+              <th>Parcelas</th><th>Valor Parcela</th><th>Total</th>
+              <th>Acréscimo R$</th><th>Acréscimo %</th>
             </tr>
           </thead>
           <tbody id="tbody"></tbody>
         </table>
       </section>
-    </div><!-- /.content -->
+    </div>
   </main>
 
-  <!-- ———————————————————————————————————————————————————————————
-       Application code
-       ——————————————————————————————————————————————————————————— -->
+  <!-- Scripts -->
   <script type="module" src="/src/main.ts"></script>
   <script type="module">
-    /* clicking the gear opens the settings page */
-    document.getElementById('gear-btn')?.
-      addEventListener('click', () => location.href = './settings.html');
+    document.getElementById('gear-btn')?.addEventListener(
+      'click', () => location.href = './settings.html'
+    );
   </script>
 </body>
 </html>
