Revert "UX fixes"
This reverts commit 5604133da4aa01d724e029f0126367c224487c49.

--- a/index.html
+++ b/index.html
@@ -3,25 +3,31 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Calculadora de Parcelamento</title>
+
+  <title>Calculadora de Parcelamento</title>
 
   <!-- Typefaces -->
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Roboto+Mono:wght@400&display=swap"
     rel="stylesheet"
   />
-  <!-- Link to stylesheet -->
-  <link rel="stylesheet" href="/style.css"> <!-- Ensure this path is correct -->
+
 </head>
 
 <body>
-  <!-- Floating gear button -->
+  <!-- ———————————————————————————————————————————————————————————
+       Global gear (settings) access – replaces the “Configurações” link
+       ——————————————————————————————————————————————————————————— -->
   <button id="gear-btn" class="gear-btn" title="Configurações">
     <img id="gear-icon" alt="Ir para configurações" />
   </button>
 
-  <!-- App shell -->
-  <main class="container">
+  <!-- ———————————————————————————————————————————————————————————
+       App shell
+       ——————————————————————————————————————————————————————————— -->
+  <main class="container two-col">
+
+    <!-- Header (shared across both panels) -->
     <header class="app-header">
       <img src="./logo.svg" alt="Logo Empório Zingaro" class="logo" />
       <h1>Calculadora de Parcelamento</h1>
@@ -30,76 +36,67 @@
     <!-- Main content area wrapper for Grid layout -->
     <div class="content">
 
-      <!-- LEFT panel -->
+      <!-- LEFT –––––––––––––––––––––––––––––––––––––––––––––––––––– -->
       <section class="panel-left glass">
-        <label>Bandeira</label>
 
-        <!-- Accessible custom combobox -->
-        <div id="issuer-combo"
-             class="combo"
-             role="combobox"
-             aria-haspopup="listbox"
-             aria-expanded="false"
-             tabindex="0">
-          <img class="combo-icon" alt="" aria-hidden="true" />
-          <span class="combo-label">-- escolha --</span>
-          <svg class="combo-caret" viewBox="0 0 24 24" width="18" height="18">
-            <path d="M6 9l6 6 6-6" stroke="currentColor" stroke-width="2"
-                  stroke-linecap="round" stroke-linejoin="round" fill="none"/>
-          </svg>
+        <label for="issuer">Bandeira</label>
+        <div class="issuer-field">
+          <select id="issuer">
+            <option value="">-- escolha --</option>
+            <!-- opções são injetadas via main.ts -->
+          </select>
+          <!-- issuer logo preview -->
+          <img
+            id="issuer-preview"
+            class="issuer-preview"
+            alt=""
+            aria-hidden="true"
+          />
         </div>
-        <ul id="issuer-list" class="combo-list" role="listbox" hidden></ul>
-
-        <!-- hidden native select for form semantics -->
-        <select id="issuer" name="issuer" hidden tabindex="-1" aria-hidden="true">
-          <option value="">-- escolha --</option>
-          <!-- Options will be populated by JS -->
-        </select>
 
         <label for="price">Valor da compra (R$)</label>
         <input id="price" type="number" step="0.01" min="0" placeholder="Ex: 1500.00" />
 
         <div class="btn-row">
-          <button id="calc"  class="btn primary">Calcular</button>
+          <button id="calc" class="btn primary">Calcular</button>
           <button id="reset" class="btn secondary">Resetar</button>
         </div>
 
         <div id="msg" class="msg" aria-live="assertive"></div> <!-- Added aria-live for error messages -->
       </section>
 
-      <!-- RIGHT panel -->
-      <section id="panel-right" class="panel-right glass">
-         <!-- NEW: Placeholder shown initially -->
-         <div id="results-placeholder" class="placeholder-content">
-            <img src="./logo.svg" alt="" width="60" style="opacity: 0.4; margin-bottom: 1rem;">
-            <p style="font-size: 0.95rem;">Selecione a bandeira e informe o valor<br>para ver as opções de parcelamento.</p>
-         </div>
+      <!-- RIGHT ––––––––––––––––––––––––––––––––––––––––––––––––––– -->
+      <section class="panel-right glass">
+        <!-- 3 × n responsive card grid -->
+        <div id="cards" class="cards-grid">
+          <!-- cards are rendered here by main.ts -->
+        </div>
 
-         <!-- Results grid - populated by JS -->
-         <div id="cards" class="cards-grid" aria-live="polite"></div> <!-- Added aria-live -->
-
-         <!-- Hidden legacy table (kept for reference, but display: none is stronger in CSS) -->
-         <table id="legacy-table" hidden>
-            <thead>
-               <tr>
-                 <th>Parcelas</th><th>Valor Parcela</th><th>Total</th>
-                 <th>Acréscimo R$</th><th>Acréscimo %</th>
-               </tr>
-            </thead>
-            <tbody id="tbody"></tbody>
-         </table>
+        <!-- Fallback table kept for progressive refactor -->
+        <table id="legacy-table" hidden>
+          <thead>
+            <tr>
+              <th>Parcelas</th>
+              <th>Valor Parcela</th>
+              <th>Total</th>
+              <th>Acréscimo R$</th>
+              <th>Acréscimo %</th>
+            </tr>
+          </thead>
+          <tbody id="tbody"></tbody>
+        </table>
       </section>
-
-    </div> <!-- End of .content -->
+    </div><!-- /.content -->
   </main>
 
-  <!-- Scripts -->
+  <!-- ———————————————————————————————————————————————————————————
+       Application code
+       ——————————————————————————————————————————————————————————— -->
   <script type="module" src="/src/main.ts"></script>
   <script type="module">
-    // Basic navigation for gear button - remains unchanged
-    document.getElementById('gear-btn')?.addEventListener(
-      'click', () => location.href = './settings.html'
-    );
+    /* clicking the gear opens the settings page */
+    document.getElementById('gear-btn')?.
+      addEventListener('click', () => location.href = './settings.html');
   </script>
 </body>
 </html>
