--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Roboto+Mono:wght@400&display=swap"
     rel="stylesheet"
   />
+  <link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
@@ -19,15 +20,16 @@
   </button>
 
   <!-- App shell -->
-  <main class="container two-col">
+  <main class="container">
     <header class="app-header">
       <img src="./logo.svg" alt="Logo Empório Zingaro" class="logo" />
       <h1>Calculadora de Parcelamento</h1>
     </header>
 
-    <div class="content">
-      <!-- LEFT panel -->
-      <section class="panel-left glass">
+    <!-- NEW flex workspace ------------------------------------------------- -->
+    <div id="workspace" class="workspace">
+      <!-- LEFT panel (form) -->
+      <section id="panel-left" class="panel-left glass">
         <label>Bandeira</label>
 
         <!-- Accessible custom combobox -->
@@ -40,8 +42,9 @@
           <img class="combo-icon" alt="" aria-hidden="true" />
           <span class="combo-label">-- escolha --</span>
           <svg class="combo-caret" viewBox="0 0 24 24" width="18" height="18">
-            <path d="M6 9l6 6 6-6" stroke="currentColor" stroke-width="2"
-                  stroke-linecap="round" stroke-linejoin="round" fill="none"/>
+            <path d="M6 9l6 6 6-6"
+                  stroke="currentColor" stroke-width="2"
+                  stroke-linecap="round" stroke-linejoin="round" fill="none" />
           </svg>
         </div>
         <ul id="issuer-list" class="combo-list" role="listbox" hidden></ul>
@@ -62,8 +65,17 @@
         <div id="msg" class="msg"></div>
       </section>
 
-      <!-- RIGHT panel -->
-      <section class="panel-right glass">
+      <!-- RIGHT panel (results) -->
+      <section id="panel-right" class="panel-right glass">
+        <!-- Placeholder shown before first calculation -->
+        <div id="placeholder" class="placeholder">
+          <ol>
+            <li>1. Escolha a bandeira</li>
+            <li>2. Digite o valor da compra</li>
+            <li>3. Clique <strong>Calcular</strong></li>
+          </ol>
+        </div>
+
         <div id="cards" class="cards-grid"></div>
 
         <!-- Hidden legacy table (fallback) -->
@@ -77,7 +89,7 @@
           <tbody id="tbody"></tbody>
         </table>
       </section>
-    </div>
+    </div><!-- /workspace -->
   </main>
 
   <!-- Scripts -->
